@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-29
+2016-4-4 David Schneider
+- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
+  no support for Generic1D yet - JIRA PSAS-225
+- store/read FexConfig by hand to handle the list of strings JIRA PSAS-224
+
 Tag: V00-09-28
 2016-2-5 David Schneider
 - update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214
